# transport-network-sim

./: .gitignore  Edge.py  Network.py  Node.py  README  Simulation.py  Train.py  bench.sh  network.py  pyproject.toml  pytest.ini  run.sh  setup_venv.sh  simple_train_sim.py  simulation.py  test.sh
src/transport_network_sim/: network.py  network_config.json  simple_train_sim.py  simulation.py
tests/: test_benchmark_run.py  test_simulation.py
tests/scenarios/: large_branching.json  medium_shared_corridor.json  small_linear.json
